<resources>
    <string name="app_name">MDCAndroid</string>
    <string name="material_widgets">Material Widgets</string>
    <string name="mdcwidget">MDCWidget</string>
    <string name="todo">TODO</string>
    <string name="material_alertdialoguebox">Material AlertDialogueBox</string>
    <string name="material_datepicker">Material DatePicker</string>
    <string name="material_button">Material Button</string>
    <string name="btn_info">Buttons allow users to take actions, and make choices, with a single tap.</string>
    <string name="example">Example :</string>
    <string name="material_radiobutton">Material RadioButton</string>
    <string name="simple_radiobutton">Simple RadioButton</string>
    <string name="source_code">Source Code</string>
    <string name="mtc_date">Date pickers let users select a date or range of dates.</string>
    <string name="date">Choose Date</string>
    <string name="mtc_text2">Dialogs inform users about a task and can contain critical information, require decisions, or involve multiple tasks.</string>
</resources>