<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MDCActivities.MDCAlertDialogueBox">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/material_alertdialoguebox"
        android:textColor="@color/PrimaryView"
        android:textStyle="bold"
        android:textSize="22sp"
        android:layout_marginTop="22dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/header_title"/>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/PrimaryView"
        android:layout_below="@id/header_title"
        android:layout_margin="22dp"
        android:id="@+id/btn_card">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mtc_text2"
            android:textColor="@color/PrimaryText"
            android:textSize="17sp"
            android:layout_margin="12dp"/>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_card"
        android:text="@string/example"
        android:textSize="27sp"
        android:textColor="@color/PrimaryAppColor"
        android:textStyle="bold"
        android:layout_marginStart="22sp"
        android:id="@+id/Example"/>

   <com.google.android.material.floatingactionbutton.FloatingActionButton
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:id="@+id/MDC3"
       android:layout_below="@id/Example"
       android:layout_centerHorizontal="true"
       android:layout_marginTop="42dp"
       android:contentDescription="@string/todo" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/source_code"
        android:textColor="@color/PrimaryView"
        android:textSize="22sp"
        app:backgroundTint="@color/srcBtn"
        app:cornerRadius="12dp"
        android:layout_alignParentBottom="false"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/MDC3"
        android:layout_marginTop="42dp"
        android:id="@+id/btnSourceCode"
        android:textStyle="bold"/>

</RelativeLayout>